# SenseCraft

./: .gitignore  README.md  pyproject.toml
examples/: demo_training.py  test_distortions.py  test_fft_vs_pixel_loss.py
src/sensecraft/loss/: __init__.py  convnext.py  convnext_dinov3.py  general.py  gram_dinov3.py  lpips.py  video.py
src/sensecraft/metrics/: __init__.py  image.py
tests/: __init__.py  test_fft_norm.py  test_losses.py  test_lpips.py
