[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sensecraft"
version = "0.0.1"
description = ""
authors = [
    { name = "Shih-Ying Yeh(KohakuBlueLeaf)", email = "apolloyeh0123@gmail.com" },
]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "torchvision",
    "numpy",
]
urls = { "Homepage" = "https://kblueleaf.net/SenseCraft" }

[project.optional-dependencies]
dev = []

[tool.setuptools]
package-dir = {"" = "src"}
