[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sensecraft"
version = "0.3.0"
description = ""
authors = [
    { name = "Shih-Ying Yeh(KohakuBlueLeaf)", email = "apolloyeh0123@gmail.com" },
]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "torchvision",
    "numpy",
    "pytorch-msssim",
]
urls = { "Homepage" = "https://kblueleaf.net/SenseCraft" }

[project.optional-dependencies]
dev = []
dinov3 = [
    "transformers>=4.56.0",
]
full = [
    "transformers>=4.56.0",
    "scikit-image",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
sensecraft = ["loss/weights/**/*.pth"]
